--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "gatsby-plugin-react-helmet": "^3.2.5",
         "gatsby-plugin-sass": "^2.2.4",
         "gatsby-plugin-sharp": "^2.5.7",
+        "gatsby-plugin-smoothscroll": "^1.1.0",
         "gatsby-plugin-typescript": "^2.4.2",
         "gatsby-remark-copy-linked-files": "^2.2.4",
         "gatsby-remark-images": "^3.2.6",
