--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@emotion/styled": "^10.0.27",
         "gatsby": "^2.20.35",
         "gatsby-image": "^2.3.5",
+        "gatsby-plugin-graphql-codegen": "^2.7.1",
         "gatsby-plugin-netlify": "^2.2.4",
         "gatsby-plugin-netlify-cms": "^4.2.5",
         "gatsby-plugin-react-helmet": "^3.2.5",
