--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -35,15 +35,166 @@ collections:
                 - { label: 'Page Title', name: 'pageTitle', widget: 'string' }
                 - { label: 'Path', name: 'path', widget: 'string' }
                 - label: Openers
-                  name: opener
-                  widget: object
+                  name: openers
+                  widget: list
                   fields:
-                      - label: 'Opener Image', 
-                        name: 'opener-image', 
-                        widget: object,
-                        fields: 
-                          - {label: 'Image', name: 'image', widget: 'image'}
-                          - {label: 'Alt', name: 'alt', widget: 'string'}
+                      - label: 'Opener Image'
+                        name: 'image'
+                        widget: object
+                        collapsed: true
+                        fields:
+                            - {
+                                  label: 'Image Source',
+                                  name: 'source',
+                                  widget: 'image',
+                              }
+                            - { label: 'Alt', name: 'alt', widget: 'string' }
+                      - label: 'Link'
+                        name: 'link'
+                        widget: object
+                        collapsed: true
+                        fields:
+                            - { label: 'Text', name: 'text', widget: 'string' }
+                            - { label: 'Href', name: 'href', widget: 'string' }
+                - label: Introducing
+                  name: introducing
+                  widget: object
+                  collapsed: true
+                  fields:
+                      - { label: Topic, name: topic, widget: string }
+                      - { label: Heading, name: heading, widget: string }
+                      - { label: Excerpt, name: text, widget: markdown }
+                      - label: 'Image'
+                        name: 'image'
+                        widget: object
+                        collapsed: true
+                        fields:
+                            - {
+                                  label: 'Image Source',
+                                  name: 'source',
+                                  widget: 'image',
+                              }
+                            - { label: 'Alt', name: 'alt', widget: 'string' }
+                      - label: 'Link'
+                        name: 'link'
+                        widget: object
+                        collapsed: true
+                        fields:
+                            - { label: 'Text', name: 'text', widget: 'string' }
+                            - { label: 'Href', name: 'href', widget: 'string' }
+                - label: Clients
+                  name: clients
+                  widget: object
+                  collapsed: true
+                  fields:
+                      - { label: Topic, name: topic, widget: string }
+                      - label: List Of Clients
+                        name: clients-list
+                        widget: list
+                        fields:
+                            - label: 'Image'
+                              name: 'image'
+                              widget: object
+                              collapsed: true
+                              fields:
+                                  - {
+                                        label: 'Image Source',
+                                        name: 'source',
+                                        widget: 'image',
+                                    }
+                                  - {
+                                        label: 'Alt',
+                                        name: 'alt',
+                                        widget: 'string',
+                                    }
+                            - label: 'Link'
+                              name: 'link'
+                              widget: object
+                              collapsed: true
+                              fields:
+                                  - {
+                                        label: 'Text',
+                                        name: 'text',
+                                        widget: 'string',
+                                    }
+                                  - {
+                                        label: 'Href',
+                                        name: 'href',
+                                        widget: 'string',
+                                    }
+                - label: Contact
+                  name: contact
+                  widget: object
+                  collapsed: true
+                  fields:
+                      - { label: Topic, name: topic, widget: string }
+                      - { label: Heading, name: heading, widget: string }
+                      - label: 'Image'
+                        name: 'image'
+                        widget: object
+                        collapsed: true
+                        fields:
+                            - {
+                                  label: 'Image Source',
+                                  name: 'source',
+                                  widget: 'image',
+                              }
+                            - { label: 'Alt', name: 'alt', widget: 'string' }
+                      - label: Office Germany
+                        name: office-germany
+                        widget: object
+                        collapsed: true
+                        fields:
+                            - { label: Heading, name: heading, widget: string }
+                            - label: Address
+                              name: address
+                              widget: list
+                              fields:
+                                  - { label: Line, name: line, widget: string }
+                      - label: Get In Touch
+                        name: get-in-touch
+                        widget: object
+                        collapsed: true
+                        fields:
+                            - { label: Heading, name: heading, widget: string }
+                            - {
+                                  label: Telephone,
+                                  name: telephone,
+                                  widget: string,
+                              }
+                            - label: 'Email'
+                              name: 'email'
+                              widget: object
+                              collapsed: true
+                              fields:
+                                  - {
+                                        label: 'Text',
+                                        name: 'text',
+                                        widget: 'string',
+                                    }
+                                  - {
+                                        label: 'Email Address',
+                                        name: 'href',
+                                        widget: 'string',
+                                    }
+                      - label: Office UAE
+                        name: office-uae
+                        widget: object
+                        collapsed: true
+                        fields:
+                            - { label: Heading, name: heading, widget: string }
+                            - label: Address
+                              name: address
+                              widget: list
+                              fields:
+                                  - { label: Line, name: line, widget: string }
+                      - label: 'Link'
+                        name: 'link'
+                        widget: object
+                        collapsed: true
+                        fields:
+                            - { label: 'Text', name: 'text', widget: 'string' }
+                            - { label: 'Href', name: 'href', widget: 'string' }
 
     - name: de
       label: Deutsch
