--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -54,7 +54,11 @@ collections:
                         widget: object
                         collapsed: true
                         fields:
-                            - { label: 'Text', name: 'text', widget: 'string' }
+                            - {
+                                  label: 'Text',
+                                  name: 'text',
+                                  widget: 'markdown',
+                              }
                             - { label: 'Href', name: 'href', widget: 'string' }
                 - label: Introducing
                   name: introducing
