--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
         "prop-types": "^15.6.0",
         "react": "^16.8.4",
         "react-dom": "^16.8.4",
-        "react-helmet": "^6.0.0"
+        "react-helmet": "^6.0.0",
+        "react-markdown": "^4.3.1",
+        "react-responsive-carousel": "^3.2.7"
     },
     "keywords": [
         "gatsby"
