--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
         "@emotion/core": "^10.0.28",
         "@emotion/styled": "^10.0.27",
         "@nteeeeed/react-multilang-menu": "1.0.16",
+        "@types/yup": "^0.29.2",
+        "formik": "^2.1.4",
         "gatsby": "^2.20.35",
         "gatsby-image": "^2.3.5",
         "gatsby-plugin-graphql-codegen": "^2.7.1",
@@ -31,7 +33,8 @@
         "react-dom": "^16.8.4",
         "react-helmet": "^6.0.0",
         "react-markdown": "^4.3.1",
-        "react-responsive-carousel": "^3.2.7"
+        "react-responsive-carousel": "^3.2.7",
+        "yup": "^0.29.1"
     },
     "keywords": [
         "gatsby"
