--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -300,7 +300,7 @@ collections:
                 label: 'TemplateKey',
                 name: 'templateKey',
                 widget: 'hidden',
-                default: 'index',
+                default: 'one-column-page',
             }
           - { label: 'Locale', name: 'locale', widget: 'hidden', default: 'en' }
           - {
