--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -162,7 +162,7 @@ collections:
                               }
                             - { label: 'Alt', name: 'alt', widget: 'string' }
                       - label: Office Germany
-                        name: office-germany
+                        name: office_germany
                         widget: object
                         collapsed: true
                         fields:
@@ -173,7 +173,7 @@ collections:
                               fields:
                                   - { label: Line, name: line, widget: string }
                       - label: Get In Touch
-                        name: get-in-touch
+                        name: get_in_touch
                         widget: object
                         collapsed: true
                         fields:
@@ -199,7 +199,7 @@ collections:
                                         widget: 'string',
                                     }
                       - label: Office UAE
-                        name: office-uae
+                        name: office_uae
                         widget: object
                         collapsed: true
                         fields:
@@ -651,7 +651,7 @@ collections:
                                   required: false,
                               }
                       - label: Office Germany
-                        name: office-germany
+                        name: office_germany
                         required: false
                         widget: object
                         collapsed: true
@@ -674,7 +674,7 @@ collections:
                                         required: false,
                                     }
                       - label: Get In Touch
-                        name: get-in-touch
+                        name: get_in_touch
                         required: false
                         widget: object
                         collapsed: true
@@ -710,7 +710,7 @@ collections:
                                         widget: 'string',
                                     }
                       - label: Office UAE
-                        name: office-uae
+                        name: office_uae
                         required: false
                         widget: object
                         collapsed: true
