--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -18,7 +18,7 @@ collections:
       files:
           - file: 'src/markdown/en/index.md'
             label: 'Home'
-            name: 'index'
+            name: 'index-en'
             fields:
                 - {
                       label: 'TemplateKey',
